# ferry

./: .gitignore  LICENSE  NOTICE.md  Package.swift  README.md
Libraries/arm64/: keel.dylib
Sources/FerryApp/: FerryApp.swift
Sources/FerryProbe/: Probe.swift
assets/: AppIcon.icns
keel/: Cargo.toml
keel/crates/keel-conformance/: Cargo.toml
keel/crates/keel-conformance/src/: main.rs
keel/crates/keel-ffi/: Cargo.toml
keel/crates/keel-ffi/src/: abi.rs  cancel.rs  errors.rs  json.rs  lib.rs  sampler.rs  state.rs
keel/crates/keel-mtp/: Cargo.toml
keel/crates/keel-mtp/src/: android.rs  error.rs  lib.rs  ops.rs  session.rs  transaction.rs  transport.rs
keel/crates/keel-mtp/tests/: fake_device.rs
keel/crates/keel-probe/: Cargo.toml
keel/crates/keel-probe/src/: direct.rs  ffi.rs  main.rs  util.rs
keel/crates/keel-proto/: Cargo.toml
keel/crates/keel-proto/src/: codec.rs  consts.rs  container.rs  datasets.rs  error.rs  lib.rs
keel/crates/keel-usb/: Cargo.toml
keel/crates/keel-usb/src/: discover.rs  exclusive.rs  handle.rs  lib.rs  pipes.rs
keel/crates/keel-vfs/: Cargo.toml
keel/crates/keel-vfs/src/: device.rs  dirops.rs  download.rs  error.rs  lib.rs  object.rs  path.rs  progress.rs  upload.rs  walk.rs
keel/crates/keel-vfs/tests/: behavior.rs
keel/docs/: CONTRACTS.md  nusb-api.md
keel/fixtures/golden/: 0001.json  0003.json  0004.json  0005.json  0008.json  0009.json  0011.json  0012.json  0013.json  0015.json  0018.json  0019.json  0020.json  README.md
scripts/: build-keel.sh  make-app.sh  make-dmg.sh  make-icon.swift
(+11 files in other folders)
